# rust-calculator

./: Cargo.toml  LICENSE  README.md
src/: calculator.rs  history.rs  input.rs  main.rs  menu.rs
